# Plutrisk

./: .gitignore  BUILD.md  CMakeLists.txt  COMPLETION_REPORT.txt  FEATURES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STRUCTURE.md  TESTING.md  build_with_deps.sh  setup.sh  verify_project.sh
src/: main_android.cpp  main_desktop.cpp
src/gui/: menu.cpp  menu.h
src/gui/tabs/: aimbot_tab.cpp  aimbot_tab.h  config_tab.cpp  config_tab.h  exploits_tab.cpp  exploits_tab.h  settings_tab.cpp  settings_tab.h  skins_tab.cpp  skins_tab.h  visuals_tab.cpp  visuals_tab.h
